--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.2",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.10.1",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
